Update homepage URL in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gouravmoger.github.io/portfolio",
+  "homepage": "https://gouravmoger.github.io/gourav-portfolio",
   "name": "myportfolio",
   "version": "0.1.0",
   "private": true,
